# hku-elec3441-imdb-benchmarks

./: .gitmodules  CMakeLists.txt  README.md  result.txt  run-all.sh
ignite/: Dockerfile  benchmark.cpp  docker-compose.yml
memcached/: Dockerfile  benchmark.c  docker-compose.yml
mongodb/: Dockerfile  docker-compose.yml
mongodb-file/: benchmark.cpp  docker-compose.yml  run.sh
redis/: Dockerfile  benchmark.c  docker-compose.yml
sqlite3/: CMakeLists.txt  Dockerfile  benchmark.cpp  run.sh
sqlite3-file/: CMakeLists.txt  benchmark.cpp  docker-compose.yml
